--- a/Hw7/Makefile
+++ b/Hw7/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 TARGET = exec
-# CFLAGS = -fopenmp -lwiringPi
+CFLAGS = -fopenmp -lwiringPi
 
 $(TARGET) : project_skeleton.c
 	$(CC) -o $(TARGET) project_skeleton.c -lm $(CFLAGS)
