--- a/Hw7/Makefile
+++ b/Hw7/Makefile
@@ -3,6 +3,6 @@ TARGET = exec
 CFLAGS = -fopenmp -lwiringPi -mfpu=neon -march=native
 
 
-$(TARGET) : 20220900_opt.c
-	$(CC) -o $(TARGET) 20220900_opt.c -lm $(CFLAGS)
+$(TARGET) : 20220900_opti.c
+	$(CC) -o $(TARGET) 20220900_opti.c -lm $(CFLAGS)
 
