--- a/Hw7/Makefile
+++ b/Hw7/Makefile
@@ -3,5 +3,5 @@ TARGET = exec
 CFLAGS = -fopenmp -lwiringPi -mfpu=neon -march=native
 
 
-$(TARGET) : 20220900_opti.c
-	$(CC) -o $(TARGET) 20220900_opti.c -lm $(CFLAGS)
+$(TARGET) : 20220900_opt2.c
+	$(CC) -o $(TARGET) 20220900_opt2.c -lm $(CFLAGS)
