--- a/Hw7/Makefile
+++ b/Hw7/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 TARGET = exec
-CFLAGS = -fopenmp -lwiringPi -mfpu=neon -march=native
+CFLAGS = -fopenmp -lwiringPi -mfpu=neon -march=armv7-a
 
 
 $(TARGET) : 20220900_opt2.c
