--- a/Hw7/20210404/Makefile
+++ b/Hw7/20210404/Makefile
@@ -2,6 +2,6 @@ CC = gcc
 TARGET = exec
 # CFLAGS = -fopenmp -lwiringPi
 
-$(TARGET) : project_skeleton.c
-	$(CC) -o $(TARGET) project_skeleton.c -lm $(CFLAGS)
+$(TARGET) : 20200499.c
+	$(CC) -o $(TARGET) 20200499.c -lm $(CFLAGS)
 
